--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Misc
-./project/dataset/jhuapl.csv
+./project/jhuapl.csv
+./project/aws_credentials.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
